--- a/_posts/countdown-ctb.html
+++ b/_posts/countdown-ctb.html
@@ -1,3 +1,10 @@
+---
+layout: page
+title: My website
+subtitle: This is where I will tell my friends way too much about me
+use-site-title: false
+---
+
 <!DOCTYPE html>
 <html lang="en" >
 
