--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -13,7 +13,7 @@ permalink: /countdown-ctb/
   
   
   
-      <link rel="stylesheet" href="countdown-ctb/style.css">
+      <link rel="stylesheet" href="cdctb.css">
 
   
 </head>
@@ -42,7 +42,7 @@ permalink: /countdown-ctb/
   
   
 
-    <script  src="countdown-ctb/index.js"></script>
+    <script  src="cdctb.js"></script>
 
 
 
