--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -20,7 +20,8 @@ permalink: /countdown-ctb/
 
 <body>
 
-  <h1>Đếm ngược 50 năm hệ chuyên, 30 năm thành lập Chuyên Thái Bình!</h1>
+  <h1>Đếm ngược 50 năm hệ chuyên,
+  <br> 30 năm thành lập THPT Chuyên Thái Bình!</h1>
 <div id="clockdiv">
   <div>
     <span class="days"></span>
@@ -40,12 +41,40 @@ permalink: /countdown-ctb/
   </div>
 </div>
   
+<script  src="cdctb.js"></script>
   
 
-    <script  src="cdctb.js"></script>
+<br>
+<br>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+<br>
+
+<p1> Now playing: Avicii - Hey Brother </p1>
 
 
+<br>
+<br>
+<br>
+<br>
 
+<audio autoplay loop controls>
+  <source src="HeyBrother.mp3">
+</audio>
 
 </body>
 
