--- a/countdown-ctb/countdown-ctb.html
+++ b/countdown-ctb/countdown-ctb.html
@@ -20,7 +20,7 @@ permalink: /countdown-ctb/
 
 <body>
 
-  <h1>Đếm ngược 50 năm hệ chuyên,
+  <h1>Đếm ngược đến Lễ Kỉ niệm 50 năm hệ chuyên,
   <br> 30 năm thành lập THPT Chuyên Thái Bình!</h1>
 <div id="clockdiv">
   <div>
