--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -1,5 +1,5 @@
 ---
-layout: default 
+layout: default_simplified
 title: Đếm ngược 30 năm CTB
 permalink: /countdown-ctb/
 ---
@@ -72,7 +72,7 @@ permalink: /countdown-ctb/
 <br>
 <br>
 
-<audio autoplay loop controls>
+<audio autoplay loop>
   <source src="HeyBrother.mp3">
 </audio>
 
