--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -72,7 +72,7 @@ permalink: /countdown-ctb/
 <br>
 <br>
 
-<audio autoplay loop>
+<audio autoplay loop controls>
   <source src="HeyBrother.mp3">
 </audio>
 
