--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -10,12 +10,7 @@ permalink: /countdown-ctb/
 <head>
   <meta charset="UTF-8">
   <title>30 năm Chuyên Thái Bình!</title>
-  
-  
-  
-      <link rel="stylesheet" href="cdctb.css">
-
-  
+  <link rel="stylesheet" href="cdctb.css">
 </head>
 
 <body>
@@ -46,18 +41,14 @@ permalink: /countdown-ctb/
 
 <br>
 <br>
-<br>
-<br>
 
-<br>
-<br>
-<br>
-<br>
+<section>
+  <a href="#" class="scroll-down" address="true"></a>
+</section>
 
-<br>
-<br>
-<br>
-<br>
+<section class="ok">
+</section>
+
 
 <br>
 <br>
@@ -65,7 +56,6 @@ permalink: /countdown-ctb/
 <br>
 
 <p1> Now playing: Avicii - Hey Brother </p1>
-
 
 <br>
 <br>
@@ -79,10 +69,10 @@ permalink: /countdown-ctb/
 <br>
 <br>
 <br>
-
-
 <br>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="scroll-btn.js"></script>
 
 </body>
 
