--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -6,18 +6,17 @@ permalink: /countdown-ctb/
 
 <!DOCTYPE html>
 <html lang="en" >
-  
-  <head>
-    <meta charset="UTF-8">
-    <title>30 năm Chuyên Thái Bình!</title>
-    <link rel="stylesheet" href="cdctb.css">
-  </head>
-  
+
+<head>
+  <meta charset="UTF-8">
+  <title>30 năm Chuyên Thái Bình!</title>
+  <link rel="stylesheet" href="cdctb.css">
+</head>
+
 <body>
 
   <h1>Đếm ngược đến Lễ Kỉ niệm 50 năm hệ chuyên,
   <br> 30 năm thành lập THPT Chuyên Thái Bình!</h1>
-
 <div id="clockdiv">
   <div>
     <span class="days"></span>
@@ -37,15 +36,17 @@ permalink: /countdown-ctb/
   </div>
 </div>
   
-
-<a href="#" class="scroll-down" address="true"></a>
+<script  src="cdctb.js"></script>
+  
 
 <br>
 <br>
 
-
-<p class="ok">
-</p>
+<section>
+  <a href="#" class="scroll-down" address="true"></a>
+</section>
+<section class="ok">
+</section>
 
 
 <br>
@@ -63,16 +64,15 @@ permalink: /countdown-ctb/
 <audio autoplay loop controls>
   <source src="HeyBrother.mp3">
 </audio>
-  
+
 <br>
 <br>
 <br>
 <br>
-  
-<script  src="cdctb.js"></script>
-<script src="scroll-btn.js"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  
+<script src="scroll-btn.js"></script>
+
 </body>
 
 </html>
