--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -61,7 +61,7 @@ permalink: /countdown-ctb/
 <br>
 <br>
 
-<audio autoplay loop controls>
+<audio autoplay loop>
   <source src="HeyBrother.mp3">
 </audio>
 
