--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -15,6 +15,7 @@ permalink: /countdown-ctb/
 
 <body>
 
+<section> 
   <h1>Đếm ngược đến Lễ Kỉ niệm 50 năm hệ chuyên,
   <br> 30 năm thành lập THPT Chuyên Thái Bình!</h1>
   
@@ -36,33 +37,36 @@ permalink: /countdown-ctb/
     <div class="smalltext">Giây</div>
   </div>
 </div>
-  
+
+</section>
+
 <script  src="cdctb.js"></script>
   
 <br>
 <br>
 
-<!-- 
+
 <section>
   <a href="#" class="scroll-down" address="true"></a>
 </section>
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <section class="ok">
 </section>
- -->
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
 <p1> Now playing: Avicii - Hey Brother </p1>
 
 <br>
