--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -65,25 +65,24 @@ permalink: /countdown-ctb/
 <br>
 <br>
 
-<section class="ok">
+<section class="ctb">
 </section>
+
 <p1> Now playing: Avicii - Hey Brother </p1>
 
 <br>
 <br>
 <br>
 <br>
-
+<br>
+<br>
+<br>
+<br>
 
 
 <audio autoplay loop>
   <source src="HeyBrother.mp3">
 </audio>
-  
-<br>
-<br>
-<br>
-<br>
   
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="scroll-btn.js"></script>
