--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -46,9 +46,11 @@ permalink: /countdown-ctb/
 <br>
 
 
+<!-- 
 <section>
   <a href="#" class="scroll-down" address="true"></a>
-</section>
+</section> 
+-->
 
 
 
@@ -80,7 +82,7 @@ permalink: /countdown-ctb/
 <br>
 
 
-<audio autoplay loop>
+<audio controls autoplay loop>
   <source src="HeyBrother.mp3">
 </audio>
   
