--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -46,11 +46,6 @@ permalink: /countdown-ctb/
 <br>
 
 
-<section>
-  <a href="#" class="scroll-down" address="true"></a>
-</section>
-
-
 
 <br>
 <br>
@@ -80,7 +75,7 @@ permalink: /countdown-ctb/
 <br>
 
 
-<audio controls autoplay loop>
+<audio autoplay loop>
   <source src="HeyBrother.mp3">
 </audio>
   
