--- a/countdown-ctb/countdown-ctb.html
+++ b/countdown-ctb/countdown-ctb.html
@@ -9,16 +9,21 @@ permalink: /countdown-ctb/
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
   <title>30 năm Chuyên Thái Bình!</title>
-  <link rel="stylesheet" href="cdctb.css">
+  
+  
+  
+      <link rel="stylesheet" href="cdctb.css">
+
+  
 </head>
 
 <body>
 
-<section> 
   <h1>Đếm ngược đến Lễ Kỉ niệm 50 năm hệ chuyên,
   <br> 30 năm thành lập THPT Chuyên Thái Bình!</h1>
-  
 <div id="clockdiv">
   <div>
     <span class="days"></span>
@@ -37,51 +42,50 @@ permalink: /countdown-ctb/
     <div class="smalltext">Giây</div>
   </div>
 </div>
-
-</section>
-
+  
 <script  src="cdctb.js"></script>
   
-<br>
-<br>
-
-
 
 <br>
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
+
 <br>
 <br>
 <br>
 <br>
 
-<section class="ctb">
-</section>
+<br>
+<br>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+<br>
 
 <p1> Now playing: Avicii - Hey Brother </p1>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
+<br>
+<br>
+<br>
+<br>
 
 <audio autoplay loop>
   <source src="HeyBrother.mp3">
 </audio>
-  
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="scroll-btn.js"></script>
-  
+
+<br>
+<br>
+<br>
+
+
+<br>
+
+
 </body>
 
 </html>
