--- a/countdown-ctb/countdown-ctb.html
+++ b/countdown-ctb/countdown-ctb.html
@@ -9,8 +9,8 @@ permalink: /countdown-ctb/
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/icon" href="img/favicon.ico" />
-  <link rel="shortcut icon" type="image/icon" href="img/favicon.ico"/>
+  <link rel="icon" type="image/icon" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/icon" href="/favicon.ico"/>
   <title>30 năm Chuyên Thái Bình!</title>
   
   
