--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -74,8 +74,8 @@ permalink: /countdown-ctb/
 <br>
 <br>
 
-<audio autoplay loop>
-  <source src="HeyBrother.mp3">
+<audio controls autoplay loop>
+  <source src="sounds/HeyBrother.mp3">
 </audio>
 
 <br>
