--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -74,7 +74,7 @@ permalink: /countdown-ctb/
 <br>
 <br>
 
-<audio controls autoplay loop>
+<audio autoplay loop>
   <source src="sounds/HeyBrother.mp3">
 </audio>
 
