Almost final commit on this countdown post.

--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -11,7 +11,7 @@ permalink: /countdown-ctb/
   <meta charset="UTF-8">
   <link rel="icon" type="image/icon" href="/favicon.ico" />
   <link rel="shortcut icon" type="image/icon" href="/favicon.ico"/>
-  <title>30 năm Chuyên Thái Bình!</title>
+  <title>30 năm thành lập THPT Chuyên Thái Bình!</title>
   
   
   
@@ -22,7 +22,7 @@ permalink: /countdown-ctb/
 
 <body>
 
-  <h1>Đếm ngược đến Lễ Kỉ niệm 50 năm hệ chuyên,
+  <h1>Đếm ngược đến Lễ kỉ niệm 50 năm hệ chuyên,
   <br> 30 năm thành lập THPT Chuyên Thái Bình!</h1>
 <div id="clockdiv">
   <div>
