Final commit on this post.

--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -1,6 +1,6 @@
 ---
 layout: default_simplified
-title: Đếm ngược 30 năm CTB
+title: Đếm ngược 30 năm thành lập THPT Chuyên Thái Bình!
 permalink: /countdown-ctb/
 ---
 
