--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -76,9 +76,7 @@ permalink: /countdown-ctb/
 <br>
 <br>
 
-<audio autoplay loop>
-  <source src="sounds/HeyBrother.mp3">
-</audio>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/483697896&color=%235195e0&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
 <br>
 <br>
