--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -10,9 +10,9 @@
 <head>
   
   <meta charset="UTF-8">
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src="js/foundation.min.js"></script>
-  <script type="text/javascript" src="js/functions.js"></script>
+  <script type="text/javascript" src="jquery.js"></script>
+  <script type="text/javascript" src="foundation.min.js"></script>
+  <script type="text/javascript" src="functions.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,400i" rel="stylesheet">
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/amplitudejs@3.3.1/dist/amplitude.js"></script>
   <link rel="icon" type="image/icon" href="/favicon.ico" />
@@ -21,7 +21,7 @@
   
   
   
-      <link rel="stylesheet" href="css/cdctb.css">
+      <link rel="stylesheet" href="cdctb.css">
 
   
 </head>
