--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -1,8 +1,8 @@
-  ---
-  layout: default_simplified
-  title: Đếm ngược 30 năm thành lập THPT Chuyên Thái Bình!
-  permalink: /countdown-ctb/
-  ---
+---
+layout: default_simplified
+title: Đếm ngược 30 năm thành lập THPT Chuyên Thái Bình!
+permalink: /countdown-ctb/
+---
 
 <!DOCTYPE html>
 <html lang="en" >
@@ -49,7 +49,7 @@
   </div>
 </div>
   
-<script  src="js/cdctb.js"></script>
+<script  src="cdctb.js"></script>
   
 
 <br>
