--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -8,13 +8,7 @@ permalink: /countdown-ctb/
 <html lang="en" >
 
 <head>
-  
   <meta charset="UTF-8">
-  <script type="text/javascript" src="jquery.js"></script>
-  <script type="text/javascript" src="foundation.min.js"></script>
-  <script type="text/javascript" src="functions.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,400i" rel="stylesheet">
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/amplitudejs@3.3.1/dist/amplitude.js"></script>
   <link rel="icon" type="image/icon" href="/favicon.ico" />
   <link rel="shortcut icon" type="image/icon" href="/favicon.ico"/>
   <title>30 năm thành lập THPT Chuyên Thái Bình!</title>
@@ -69,13 +63,25 @@ permalink: /countdown-ctb/
 <br>
 <br>
 
-<div id="cp_widget_d0f523a8-ece9-42a9-a5d2-304c99ba81fc">...</div><script type="text/javascript">
-var cpo = []; cpo["_object"] ="cp_widget_d0f523a8-ece9-42a9-a5d2-304c99ba81fc"; cpo["_fid"] = "AUBAiXe0ceGI";
-var _cpmp = _cpmp || []; _cpmp.push(cpo);
-(function() { var cp = document.createElement("script"); cp.type = "text/javascript";
-cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
-var c = document.getElementsByTagName("script")[0];
-c.parentNode.insertBefore(cp, c); })(); </script>
+<br>
+<br>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+<br>
+
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/483697896&color=%235195e0&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+
+<br>
+<br>
+<br>
+
+
+<br>
+
 
 </body>
 
