--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -72,13 +72,9 @@ permalink: /countdown-ctb/
 <br>
 <br>
 <br>
-<div id="cp_widget_d0f523a8-ece9-42a9-a5d2-304c99ba81fc">...</div><script type="text/javascript">
-  var cpo = []; cpo["_object"] ="cp_widget_d0f523a8-ece9-42a9-a5d2-304c99ba81fc"; cpo["_fid"] = "AUBAiXe0ceGI";
-  var _cpmp = _cpmp || []; _cpmp.push(cpo);
-  (function() { var cp = document.createElement("script"); cp.type = "text/javascript";
-  cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
-  var c = document.getElementsByTagName("script")[0];
-  c.parentNode.insertBefore(cp, c); })(); </script>
+<iframe id="ytplayer" type="text/html" width="640" height="360"
+  src="https://www.youtube.com/embed/rLlZE_G_fXo?autoplay=1&loop=1"
+  frameborder="0"></iframe>
 <br>
 <br>
 <br>
