Just another tests

--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -22,8 +22,8 @@ permalink: /countdown-ctb/
 
 <body>
 
-  <h1>Đếm ngược đến Lễ kỉ niệm 50 năm hệ chuyên,
-  <br> 30 năm thành lập THPT Chuyên Thái Bình!</h1>
+  <h1>Lễ kỉ niệm 50 năm hệ chuyên,
+  <br> 30 năm thành lập THPT Chuyên Thái Bình sẽ bắt đầu trong</h1>
 <div id="clockdiv">
   <div>
     <span class="days"></span>
