--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -56,7 +56,7 @@ permalink: /countdown-ctb/
 <br>
 <br>
 <iframe id="ytplayer" type="text/html" width="640" height="360"
-  src="https://www.youtube.com/embed/rLlZE_G_fXo?autoplay=1&loop=1"
+  src="https://www.youtube.com/embed/rLlZE_G_fXo?loop=1&autoplay=1&controls=1"
   frameborder="0"></iframe>
 <br>
 <br>
