--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -1,6 +1,6 @@
 ---
 layout: default_simplified
-title: Đếm ngược 30 năm thành lập THPT Chuyên Thái Bình!
+title: 50 năm hệ chuyên, 30 năm thành lập THPT Chuyên Thái Bình!
 permalink: /countdown-ctb/
 ---
 
@@ -11,7 +11,7 @@ permalink: /countdown-ctb/
   <meta charset="UTF-8">
   <link rel="icon" type="image/icon" href="/favicon.ico" />
   <link rel="shortcut icon" type="image/icon" href="/favicon.ico"/>
-  <title>30 năm thành lập THPT Chuyên Thái Bình!</title>
+  <title>50 năm hệ chuyên, 30 năm thành lập THPT Chuyên Thái Bình!</title>
   
   
   
@@ -22,7 +22,7 @@ permalink: /countdown-ctb/
 
 <body>
 
-  <h1>Lễ kỉ niệm 50 năm hệ chuyên,
+  <h1>Sự kiện kỉ niệm 50 năm hệ chuyên,
   <br> 30 năm thành lập THPT Chuyên Thái Bình sẽ bắt đầu trong</h1>
 <div id="clockdiv">
   <div>
