Another "Final" commit, minor adjust.

--- a/countdown-ctb.html
+++ b/countdown-ctb.html
@@ -22,7 +22,7 @@ permalink: /countdown-ctb/
 
 <body>
 
-  <h1>Sự kiện kỉ niệm 50 năm hệ chuyên,
+  <h1>Chuỗi sự kiện kỉ niệm 50 năm hệ chuyên,
   <br> 30 năm thành lập THPT Chuyên Thái Bình sẽ bắt đầu trong</h1>
 <div id="clockdiv">
   <div>
